--- a/package.json
+++ b/package.json
@@ -13,16 +13,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.2",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
+    "angular2-markdown": "^2.2.2",
+    "angularfire2": "^5.0.0-rc.4",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.8.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
+    "showdown": "^1.8.5",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -44,6 +55,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "^2.4.2"
   }
 }
